# mgit

./: .gitignore  Makefile  README.md  alias_sample  exclude_sample  mgit  pyproject.toml  setup-macos.sh
.github/workflows/: build-release.yml
src/: _version.py  add_types.py  alias_parser.py  exclude_parser.py  git_cache.py  git_utils.py  main.py  parallel_processor.py  progressive_display.py  repo_display.py  repo_scanner.py  requirements.py
